--- a/package.json
+++ b/package.json
@@ -1,35 +1,36 @@
 {
-  "name": "heisenberg",
-  "version": "1.0.3",
-  "author": "Mario Brusarosco <mariobrusarosco@gmail.com> (http://example.com)",
-  "description": "",
-  "main": "dist/heisenberg.js",
-  "files": [
-    "dist"
-  ],
-  "scripts": {
-    "dev": "webpack --watch --config webpack.config.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "yarn eslint && webpack --config webpack.config.js",
-    "eslint": "eslint src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/mariobrusarosco/galhofa.git"
-  },
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/mariobrusarosco/galhofa/issues"
-  },
-  "homepage": "https://github.com/mariobrusarosco/galhofa#readme",
-  "dependencies": {
-    "lodash": "^4.17.11"
-  },
-  "devDependencies": {
-    "eslint": "^5.11.1",
-    "express": "^4.16.4",
-    "webpack": "^4.28.3",
-    "webpack-cli": "^3.2.0",
-    "webpack-dev-server": "^3.1.14"
-  }
+	"name": "walter-white",
+	"version": "1.0.6",
+	"author": "Mario Brusarosco <mariobrusarosco@gmail.com> (http://example.com)",
+	"description": "",
+	"main": "dist/walter-white.js",
+	"files": [
+		"dist"
+	],
+	"scripts": {
+		"dev": "webpack --watch --config webpack.config.js",
+		"test": "jest --config jest.config.js",
+		"test:watch": "yarn test -- --watch",
+		"build": "yarn eslint && webpack --config webpack.config.js",
+		"eslint": "eslint src/**/*"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/mariobrusarosco/walter-white.git"
+	},
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/mariobrusarosco/walter-white/issues"
+	},
+	"homepage": "https://github.com/mariobrusarosco/walter-white#readme",
+	"devDependencies": {
+		"eslint": "^5.11.1",
+		"express": "^4.16.4",
+		"jest": "^24.0.0",
+		"jest-cli": "^24.0.0",
+		"nodemon": "^1.18.9",
+		"webpack": "^4.28.3",
+		"webpack-cli": "^3.2.0",
+		"webpack-dev-server": "^3.1.14"
+	}
 }
