--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,11 +6,9 @@ defaults: &defaults
     - image: circleci/node:8.9.1
 
 jobs:
-  build:
-    <<: *defaults
+  test:
     steps:
       - checkout
-
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
@@ -25,10 +23,29 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-
+  publish:
+    steps:
+      - checkout
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
       - run:
           name: Publish package
           command: npm publish
+
+workflows:
+  version: 2
+  test-plublish:
+    jobs:
+      - build
+        filters:
+          tags:
+            only: /^v.*/
+      - publish
+          requires:
+            - build
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignores: /.*/
