--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 
-defaults: &defaults
+defaults:
   working_directory: ~/repo
   docker:
     - image: circleci/node:8.9.1
@@ -40,16 +40,16 @@ jobs:
 workflows:
   version: 2
 
-  build-deploy:
+  test-publish:
     jobs:
-      - build:
+      - test:
           filters:
             tags:
               only: /^v.*/
 
       - publish:
           requires:
-            - build
+            - test
           filters:
             branches:
               ignore: /.*/
