--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 
-defaults:
+defaults: &defaults
   working_directory: ~/repo
   docker:
     - image: circleci/node:8.9.1
@@ -16,7 +16,9 @@ jobs:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-
+      - run:
+          name: Installation
+          command: yarn
       - run:
           name: Run Lint
           command: yarn eslint
@@ -40,9 +42,9 @@ jobs:
 workflows:
   version: 2
 
-  test-publish:
+  build-deploy:
     jobs:
-      - test:
+      - build:
           filters:
             tags:
               only: /^v.*/
