--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,9 +42,9 @@ jobs:
 workflows:
   version: 2
 
-  build-deploy:
+  test-publish:
     jobs:
-      - build:
+      - test:
           filters:
             tags:
               only: /^v.*/
