--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,7 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
 
 defaults: &defaults
@@ -7,55 +11,38 @@ defaults: &defaults
 
 jobs:
   test:
-    docker:
-      - image: buildpack-deps:trusty
+    <<: *defaults  
     steps:
       - checkout
+
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
+	  # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
+
+      - run: npm install
       - run:
-          name: Installation
-          command: yarn
-      - run:
-          name: Run Lint
-          command: yarn eslint
+          name: Run tests
+          command: npm test
 
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-  publish:
-    docker:
-      - image: buildpack-deps:trusty
+
+      - persist_to_workspace:
+          root: ~/repo
+          paths: .
+  deploy:
+    <<: *defaults
     steps:
-      - checkout
+      - attach_workspace:
+          at: ~/repo
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
       - run:
           name: Publish package
           command: npm publish
-
-workflows:
-  version: 2
-
-  test-publish:
-    jobs:
-      - test:
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
-
-      - publish:
-          requires:
-            - test
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
+            
