--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,48 +1,51 @@
-# Javascript Node CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-javascript/ for more details
-#
 version: 2
-
-defaults: &defaults
+defaults:
   working_directory: ~/repo
   docker:
-    - image: circleci/node:8.9.1
-
+    -
+      image: 'circleci/node:8.9.1'
 jobs:
   test:
-    <<: *defaults  
+    working_directory: ~/repo
+    docker:
+      -
+        image: 'circleci/node:8.9.1'
     steps:
       - checkout
-
-      - restore_cache:
+      -
+        restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-	  # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run: npm install
-      - run:
-          name: Run tests
-          command: npm test
-
-      - save_cache:
+            - 'v1-dependencies-{{ checksum "package.json" }}'
+            - v1-dependencies-
+      -
+        run: 'npm install'
+      -
+        run:
+          name: 'Run tests'
+          command: 'npm test'
+      -
+        save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - persist_to_workspace:
+          key: 'v1-dependencies-{{ checksum "package.json" }}'
+      -
+        persist_to_workspace:
           root: ~/repo
           paths: .
   deploy:
-    <<: *defaults
+    working_directory: ~/repo
+    docker:
+      -
+        image: 'circleci/node:8.9.1'
     steps:
-      - attach_workspace:
+      -
+        attach_workspace:
           at: ~/repo
-      - run:
-          name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
-      - run:
-          name: Publish package
-          command: npm publish
-            
+      -
+        run:
+          name: 'Authenticate with registry'
+          command: 'echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc'
+      -
+        run:
+          name: 'Publish package'
+          command: 'npm publish'
