--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,3 +49,21 @@ jobs:
         run:
           name: 'Publish package'
           command: 'npm publish'
+workflows:
+  version: 2
+  test-deploy:
+    jobs:
+      -
+        test:
+          filters:
+            tags:
+              only: '/^v.*/'
+      -
+        deploy:
+          requires:
+            - test
+          filters:
+            tags:
+              only: '/^v.*/'
+            branches:
+              ignore: '/.*/'
