--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ defaults:
     -
       image: 'circleci/node:8.9.1'
 jobs:
-  build:
+  test:
     working_directory: ~/repo
     docker:
       -
@@ -45,10 +45,21 @@ jobs:
         run:
           name: 'Publish package'
           command: 'npm publish'
- 
 workflows:
   version: 2
-  deploy:
+  test-deploy:
     jobs:
-      - build
-      - deploy
+      -
+        test:
+          filters:
+            tags:
+              only: '/^v.*/'
+      -
+        deploy:
+          requires:
+            - test
+          filters:
+            tags:
+              only: '/^v.*/'
+            branches:
+              ignore: '/.*/'
