--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,49 +5,10 @@ defaults:
     -
       image: 'circleci/node:8.9.1'
 jobs:
-  test:
-    working_directory: ~/repo
+  publish:
     docker:
-      -
-        image: 'circleci/node:8.9.1'
+      - image: circleci/<language>:<version TAG>
     steps:
       - checkout
-      -
-        restore_cache:
-          keys:
-            - 'v1-dependencies-{{ checksum "package.json" }}'
-            - v1-dependencies-
-      -
-        run: 'npm install'
-      -
-        save_cache:
-          paths:
-            - node_modules
-          key: 'v1-dependencies-{{ checksum "package.json" }}'
-  deploy:
-    working_directory: ~/repo
-    docker:
-      -
-        image: 'circleci/node:8.9.1'
-    steps:
-      -
-        attach_workspace:
-          at: ~/repo
-      -
-        run:
-          name: 'Authenticate with registry'
-          command: 'echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc'
-      -
-        run:
-          name: 'Publish package'
-          command: 'npm publish'
-workflows:
-  version: 2
-  test-deploy:
-    jobs:
-      -
-        test
-      -
-        deploy:
-          requires:
-            - test
+      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - run: npm publish
