--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,8 @@ jobs:
       - checkout
       - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
       - run: npm publish
+workflows:
+  version: 2
+  tagged-build:
+    jobs:
+      - publish
