--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,16 +5,65 @@ defaults:
     -
       image: 'circleci/node:8.9.1'
 jobs:
-  publish:
+  test:
+    working_directory: ~/repo
     docker:
-    -
-      image: 'circleci/node:8.9.1'
+      -
+        image: 'circleci/node:8.9.1'
     steps:
       - checkout
-      - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
-      - run: npm publish
+      -
+        restore_cache:
+          keys:
+            - 'v1-dependencies-{{ checksum "package.json" }}'
+            - v1-dependencies-
+      -
+        run: 'npm install'
+      -
+        run:
+          name: 'Run tests'
+          command: 'npm --v'
+      -
+        save_cache:
+          paths:
+            - node_modules
+          key: 'v1-dependencies-{{ checksum "package.json" }}'
+      -
+        persist_to_workspace:
+          root: ~/repo
+          paths: .
+  deploy:
+    working_directory: ~/repo
+    docker:
+      -
+        image: 'circleci/node:8.9.1'
+    steps:
+      -
+        attach_workspace:
+          at: ~/repo
+      -
+        run:
+          name: 'Authenticate with registry'
+          command: 'echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc'
+      -
+        run:
+          name: 'Publish package'
+          command: 'npm publish'
 workflows:
   version: 2
-  tagged-build:
+  test-deploy:
     jobs:
-      - publish
+      -
+        test:
+          filters:
+            tags:
+              only: '/^v.*/'
+      -
+        deploy:
+          requires:
+            - test
+          filters:
+            tags:
+              only: '/^v.*/'
+            branches:
+              ignore: '/.*/'
