--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,4 +66,4 @@ workflows:
             tags:
               only: '/^v.*/'
             branches:
-              ignore: '/.*/'
+              - master
