--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,14 +57,17 @@ workflows:
   version: 2
   test-deploy:
     jobs:
-      -
-        test:
+      - test:
+          filters:
+            tags:
+              only: /^v.*/
+      - deploy:
+          requires:
+            - test
           filters:
             tags:
               only: /^v.*/
             branches:
               ignore: /.*/
-      -
-        deploy:
-          requires:
-            - test
+            
+            
