--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,73 +2,57 @@ version: 2
 defaults:
   working_directory: ~/repo
   docker:
-    -
-      image: 'circleci/node:8.9.1'
+  - image: circleci/node:8.9.1
 jobs:
   test:
     working_directory: ~/repo
     docker:
-      -
-        image: 'circleci/node:8.9.1'
+    - image: circleci/node:8.9.1
     steps:
-      - checkout
-      -
-        restore_cache:
-          keys:
-            - 'v1-dependencies-{{ checksum "package.json" }}'
-            - v1-dependencies-
-      -
-        run: 'npm install'
-      -
-        run:
-          name: 'Run eslint'
-          command: 'yarn eslint'
-#       -
-#         run:
-#           name: 'Run tests'
-#           command: 'npm --v'
-      -
-        save_cache:
-          paths:
-            - node_modules
-          key: 'v1-dependencies-{{ checksum "package.json" }}'
-      -
-        persist_to_workspace:
-          root: ~/repo
-          paths: .
+    - checkout
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "package.json" }}
+        - v1-dependencies-
+    -
+      run:
+        name: 'Run eslint'
+        command: 'yarn eslint'
+    - save_cache:
+        paths:
+        - node_modules
+        key: v1-dependencies-{{ checksum "package.json" }}
+    - persist_to_workspace:
+        root: ~/repo
+        paths: .
   deploy:
     working_directory: ~/repo
     docker:
-      -
-        image: 'circleci/node:8.9.1'
+    - image: circleci/node:8.9.1
     steps:
-      -
-        attach_workspace:
-          at: ~/repo
-      -
-        run:
-          name: 'Authenticate with registry'
-          command: 'echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc'
-      -
-        run:
-          name: 'Publish package'
-          command: 'npm publish'
+    - attach_workspace:
+        at: ~/repo
+    - run:
+        name: Authenticate with registry
+        command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
+    - run:
+        name: Publish package
+        command: npm publish
 workflows:
   version: 2
   test-deploy:
     jobs:
-      - test:
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
-      - deploy:
-          requires:
-            - test
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
-
+    - test:
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore: /.*/
+    - deploy:
+        requires:
+        - test
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore: /.*/
