--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,10 @@ jobs:
             - v1-dependencies-
       -
         run: 'npm install'
-      -
-        run:
-          name: 'Run eslint'
-          command: 'yarn eslint'
+#       -
+#         run:
+#           name: 'Run eslint'
+#           command: 'npm --v'
 #       -
 #         run:
 #           name: 'Run tests'
@@ -71,4 +71,3 @@ workflows:
               only: /^v.*/
             branches:
               ignore: /.*/
-
