--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
         keys:
         - v1-dependencies-{{ checksum "package.json" }}
         - v1-dependencies-
-    - run: npm install
+    # - run: npm install
     - save_cache:
         paths:
         - node_modules
@@ -46,10 +46,10 @@ workflows:
           branches:
             ignore: /.*/
     - deploy:
-        requires:
-        - test
-        filters:
-          tags:
-            only: /^v.*/
-          branches:
-            ignore: /.*/
+        # requires:
+        # - test
+        # filters:
+        #   tags:
+        #     only: /^v.*/
+        #   branches:
+        #     ignore: /.*/
