fixing node_modules

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,8 +46,8 @@ workflows:
           branches:
             ignore: /.*/
     - deploy:
-        # requires:
-        # - test
+        requires:
+        - test
         # filters:
         #   tags:
         #     only: /^v.*/
