--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,8 @@ workflows:
     - deploy:
         requires:
         - test
-        # filters:
-        #   tags:
-        #     only: /^v.*/
-        #   branches:
-        #     ignore: /.*/
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore: /.*/
