fixing node_modules

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,61 +1,38 @@
+# Javascript Node CircleCI 2.0 configuration file
+#
+# Check https://circleci.com/docs/2.0/language-javascript/ for more details
+#
 version: 2
 
 defaults: &defaults
   working_directory: ~/repo
   docker:
-    - image: circleci/node:10 
+    - image: circleci/node:8.9.1
 
 jobs:
-  test:
-    docker:
-      - image: buildpack-deps:trusty
+  build:
+    <<: *defaults
     steps:
       - checkout
+
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "package.json" }}
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
-      - run:
-          name: Installation
-          command: npm install
+
       - run:
           name: Run Lint
-          command: npm run eslint
+          command: yarn eslint
 
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
-  publish:
-    docker:
-      - image: buildpack-deps:trusty
-    steps:
-      - checkout
+
       - run:
           name: Authenticate with registry
           command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
       - run:
           name: Publish package
           command: npm publish
-
-workflows:
-  version: 2
-
-  test-publish:
-    jobs:
-      - test:
-          filters:
-            tags:
-              only: /^v.*/
-            branches:
-              ignore: /.*/
-
-      - publish:
-          requires:
-            - test
-          filters:
-            branches:
-              ignore: /.*/
-            tags:
-              only: /^v.*/
