--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,36 +3,59 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
-
-defaults: &defaults
+defaults:
   working_directory: ~/repo
   docker:
-    - image: circleci/node:8.9.1
-
+  - image: circleci/node:8.9.1
 jobs:
-  build:
-    <<: *defaults
+  test:
+    working_directory: ~/repo
+    docker:
+    - image: circleci/node:8.9.1
     steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
-      - run:
-          name: Run Lint
-          command: yarn eslint
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-
-      - run:
-          name: Authenticate with registry
-          command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
-      - run:
-          name: Publish package
-          command: npm publish
+    - checkout
+    - restore_cache:
+        keys:
+        - v1-dependencies-{{ checksum "package.json" }}
+        - v1-dependencies-
+    - run:
+        name: Run Lint
+        command: yarn eslint
+    - save_cache:
+        paths:
+        - node_modules
+        key: v1-dependencies-{{ checksum "package.json" }}
+    - persist_to_workspace:
+        root: ~/repo
+        paths: .
+  deploy:
+    working_directory: ~/repo
+    docker:
+    - image: circleci/node:8.9.1
+    steps:
+    - attach_workspace:
+        at: ~/repo
+    - run:
+        name: Authenticate with registry
+        command: echo "//registry.npmjs.org/:_authToken=$npm_TOKEN" > ~/repo/.npmrc
+    - run:
+        name: Publish package
+        command: npm publish
+workflows:
+  version: 2
+  test-deploy:
+    jobs:
+    - test:
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore: /.*/
+    - deploy:
+        requires:
+        - test
+        filters:
+          tags:
+            only: /^v.*/
+          branches:
+            ignore: /.*/
