--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"webpack": "^4.28.3",
 		"webpack-cli": "^3.2.0",
 		"webpack-dev-server": "^3.1.14"
+	},
+	"dependencies": {
+		"ramda": "^0.26.1"
 	}
 }
