--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,8 @@ jobs:
         - v1-dependencies-{{ checksum "package.json" }}
         - v1-dependencies-
     - run:
-        name: Run Lint
-        command: yarn eslint
+        name: Run Build
+        command: yarn build
     - save_cache:
         paths:
         - node_modules
