--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,9 @@ jobs:
         - v1-dependencies-{{ checksum "package.json" }}
         - v1-dependencies-
     - run:
+        name: Install
+        command: yarn
+    - run:
         name: Run Lint
         command: yarn eslint
     - run:
