--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "walter-white",
-	"version": "1.0.18",
+	"version": "1.0.19",
 	"author": "Mario Brusarosco <mariobrusarosco@gmail.com> (http://example.com)",
 	"description": "",
 	"main": "dist/walter-white.js",
@@ -11,7 +11,7 @@
 		"dev": "webpack --watch --config webpack.config.js",
 		"test": "jest --config jest.config.js",
 		"test:watch": "yarn test -- --watch",
-		"build": "yarn eslint && webpack --config webpack.config.js",
+		"build": "yarn eslint && yarn test && webpack --config webpack.config.js",
 		"eslint": "eslint --cache --fix src/"
 	},
 	"repository": {
