--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,4 +64,5 @@ workflows:
           tags:
             only: /^v.*/
           branches:
-            ignore: /.*/
+            only:
+              - master
