Compose on dist/ + test and lint o pre-version

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "dev": "webpack --watch --config webpack.config.js",
     "test": "jest --config jest.config.js",
     "test:watch": "yarn test -- --watch",
-    "build": "yarn eslint && yarn test && webpack --config webpack.config.js",
+    "build": " webpack --config webpack.config.js",
     "eslint": "eslint --cache --fix src/",
-    "preversion": "yarn test",
+    "preversion": "yarn eslint && yarn test",
     "version": "yarn build && git add dist",
     "postversion": "git push && git push --tags"
   },
