--- a/package.json
+++ b/package.json
@@ -2,15 +2,12 @@
   "name": "walter-white",
   "version": "1.2.2",
   "author": "Mario Brusarosco <mariobrusarosco@gmail.com> (http://example.com)",
-  "description": "",
+  "description": "walter white",
   "main": "./bin/index.js",
+  "path": "./bin/index.js",
   "bin": {
     "walter-white": "bin/index.js"
   },
-  "path": "dist/walter-white.js",
-  "files": [
-    "dist"
-  ],
   "scripts": {
     "dev": "webpack --watch --config webpack.config.js",
     "test": "jest --config jest.config.js",
