--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "bin",
     "dist"
   ],
+  "type": "module",
+  "module": "./dist/index.js",
   "scripts": {
     "dev": "webpack --watch --config webpack.config.js",
     "test": "jest --config jest.config.js",
