--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "walter-white",
   "version": "2.1.0",
   "author": "Mario Brusarosco <mariobrusarosco@gmail.com> (http://example.com)",
-  "main": "./dist/index.js",
+  "main": "./dist/walter-white.js",
   "bin": {
     "walter-white": "bin/index.js"
   },
@@ -10,7 +10,7 @@
     "bin",
     "dist"
   ],
-  "module": "./dist/index.js",
+  "module": "./dist/walter-white.js",
   "scripts": {
     "dev": "webpack --watch --config webpack.config.js",
     "test": "jest --config jest.config.js",
