--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walter-white",
-  "version": "4.0.0",
+  "version": "1.2.3",
   "author": "Mario Brusarosco <mariobrusarosco@gmail.com> (http://example.com)",
   "main": "./dist/walter-white.js",
   "bin": {
@@ -16,9 +16,7 @@
     "test": "jest --config jest.config.js",
     "test:watch": "yarn test -- --watch",
     "build": " webpack --config webpack.config.js",
-    "eslint": "eslint --cache --fix src/",
-    "preversion": "echo preversion",
-    "version": "yarn build && git add dist"
+    "eslint": "eslint --cache --fix src/"
   },
   "devDependencies": {
     "eslint": "^5.11.1",
